Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-15049

Fix the tree building in views with complex reduce

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 3.1.0, 4.0.0
    • 3.0.2
    • view-engine
    • Security Level: Public
    • None
    • Untriaged
    • Unknown

    Description

      If the KP node size is large (e.g. due to large reduce value), while building the btree, we may be flushing that node only to
      disk and creating one parent node for that.This will not reduce the number of nodes in the upper level of the tree, and the
      tree building will never finish.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              James Flather James Flather (Inactive)
              nimish Nimish Gupta
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty