tests/views/reducers.c
@@ -8,6 +8,11 @@
 
 #define BITMAP_SIZE 1024
 
+#define VIEW_KV_CHUNK_THRESHOLD (7 * 1024)
+#define VIEW_KP_CHUNK_THRESHOLD (6 * 1024)
+
+int view_btree_cmp(const sized_buf *key1, const sized_buf *key2);
+couchfile_modify_result *make_modres(arena* a, couchfile_modify_request *rq);
 static void free_node_list(nodelist *nl)
 {
     nodelist *tmp;
@@ -1524,6 +1529,203 @@ static void test_view_btree_no_reducers(void)
     free_node_list(nl);
 }
 
+static void test_view_btree_large_reducer(void)
+{
+    char *error_msg = NULL;
+    view_reducer_ctx_t *ctx = NULL;
+    const char *function_sources[] = {
+        "function(key, values, rereduce) {"
+        "   if (rereduce) {"
+        "       var a = \"a\";"
+        "       for(i=0;i<6000;i++) {"
+        "           a = a + \"a\";"
+        "       }"
+        "       return a;"
+        "   }"
+        "   return 1;"
+        "}"
+    };
+
+    view_btree_key_t key1, key2;
+    char *key1_bin = NULL;
+    char *key2_bin = NULL;
+    size_t key1_bin_size = 0;
+    size_t key2_bin_size = 0;
+
+    view_btree_value_t value1, value2;
+    char *value1_bin = NULL;
+    char *value2_bin = NULL;
+    char *value3_bin = NULL;
+    size_t value1_bin_size = 0;
+    size_t value2_bin_size = 0;
+
+    view_btree_reduction_t reduction1;
+    char reduction1_bin[7000];
+    size_t reduction1_bin_size = 0;
+    view_btree_reduction_t reduction2;
+    char reduction2_bin[7000];
+    size_t reduction2_bin_size = 0;
+
+    nodelist *nl = NULL, *nl2 = NULL, *nl0 = NULL;
+    node_pointer *np = NULL, *np2 = NULL;
+
+    view_btree_reduction_t *red = NULL;
+
+    ctx = make_view_reducer_ctx(function_sources, 1, &error_msg);
+    cb_assert(ctx != NULL);
+
+    key1.json_key.buf = "10";
+    key1.json_key.size = sizeof("10") - 1;
+    key1.doc_id.buf = "doc_10";
+    key1.doc_id.size = sizeof("doc_10") - 1;
+    cb_assert(encode_view_btree_key(&key1, &key1_bin, &key1_bin_size)
+        == COUCHSTORE_SUCCESS);
+
+    key2.json_key.buf = "11";
+    key2.json_key.size = sizeof("11") - 1;
+    key2.doc_id.buf = "doc_11";
+    key2.doc_id.size = sizeof("doc_11") - 1;
+    cb_assert(encode_view_btree_key(&key2, &key2_bin, &key2_bin_size)
+        == COUCHSTORE_SUCCESS);
+
+    value1.partition = 7;
+    value1.num_values = 1;
+    value1.values = (sized_buf *) malloc(sizeof(sized_buf) * 1);
+    value1.values[0].buf = malloc(6000);
+    value1.values[0].size = 6000;
+    cb_assert(encode_view_btree_value(&value1, &value1_bin, &value1_bin_size)
+        == COUCHSTORE_SUCCESS);
+
+    value2.partition = 666;
+    value2.num_values = 1;
+    value2.values = (sized_buf *) malloc(sizeof(sized_buf) * 1);
+    value2.values[0].buf = malloc(6000);
+    value2.values[0].size = 6000;
+    cb_assert(encode_view_btree_value(&value2, &value2_bin, &value2_bin_size)
+        == COUCHSTORE_SUCCESS);
+
+    nl0 = (nodelist *) malloc(sizeof(nodelist));
+    cb_assert(nl0 != NULL);
+    nl0->pointer = NULL;
+
+    nl = (nodelist *) malloc(sizeof(nodelist));
+    cb_assert(nl != NULL);
+    nl->data.buf = value1_bin;
+    nl->data.size = value1_bin_size;
+    nl->key.buf = key1_bin;
+    nl->key.size = key1_bin_size;
+    nl->pointer = NULL;
+    nl0->next = nl;
+
+    nl2 = (nodelist *) malloc(sizeof(nodelist));
+    cb_assert(nl2 != NULL);
+    nl2->data.buf = value2_bin;
+    nl2->data.size = value2_bin_size;
+    nl2->key.buf = key2_bin;
+    nl2->key.size = key2_bin_size;
+    nl2->pointer = NULL;
+    nl->next = nl2;
+    nl2->next = NULL;
+
+    reduction1.kv_count = 11;
+    memset(&reduction1.partitions_bitmap, 0, sizeof(reduction1.partitions_bitmap));
+    set_bit(&reduction1.partitions_bitmap, 10);
+    set_bit(&reduction1.partitions_bitmap, 1011);
+    reduction1.num_values = 1;
+    reduction1.reduce_values = (sized_buf *) malloc(sizeof(sized_buf) * 1);
+    cb_assert(reduction1.reduce_values != NULL);
+    reduction1.reduce_values[0].buf = "100";
+    reduction1.reduce_values[0].size = 3;
+    cb_assert(encode_view_btree_reduction(&reduction1, reduction1_bin, &reduction1_bin_size)
+        == COUCHSTORE_SUCCESS);
+
+    reduction2.kv_count = 44;
+    memset(&reduction2.partitions_bitmap, 0, sizeof(reduction2.partitions_bitmap));
+    set_bit(&reduction2.partitions_bitmap, 10);
+    set_bit(&reduction2.partitions_bitmap, 777);
+    set_bit(&reduction2.partitions_bitmap, 333);
+    reduction2.num_values = 1;
+    reduction2.reduce_values = (sized_buf *) malloc(sizeof(sized_buf) * 1);
+    cb_assert(reduction2.reduce_values != NULL);
+    reduction2.reduce_values[0].buf = "100";
+    reduction2.reduce_values[0].size = 3;
+    cb_assert(encode_view_btree_reduction(&reduction2, reduction2_bin, &reduction2_bin_size)
+        == COUCHSTORE_SUCCESS);
+
+    np = (node_pointer *) malloc(sizeof(node_pointer));
+    cb_assert(np != NULL);
+    np->key.buf = key1_bin;
+    np->key.size = key1_bin_size;
+    np->reduce_value.buf = reduction1_bin;
+    np->reduce_value.size = reduction1_bin_size;
+    np->pointer = 0;
+    np->subtreesize = 222;
+    nl->pointer = np;
+
+    np2 = (node_pointer *) malloc(sizeof(node_pointer));
+    cb_assert(np2 != NULL);
+    np2->key.buf = key2_bin;
+    np2->key.size = key2_bin_size;
+    np2->reduce_value.buf = reduction2_bin;
+    np2->reduce_value.size = reduction2_bin_size;
+    np2->pointer = 0;
+    np2->subtreesize = 333;
+    nl2->pointer = np2;
+
+    couchstore_error_t ret = COUCHSTORE_SUCCESS;
+    arena *transient_arena = new_arena(0);
+    arena *persistent_arena = new_arena(0);
+    couchfile_modify_result *mr;
+    tree_file index_file;
+
+    compare_info cmp = {
+        .compare = view_btree_cmp
+    };
+    char *dst_file = "dst_file";
+    cb_assert(transient_arena != NULL && persistent_arena != NULL);
+    ret = tree_file_open(&index_file, dst_file, O_CREAT | O_RDWR,
+        couchstore_get_default_file_ops());
+    cb_assert(ret == COUCHSTORE_SUCCESS);
+    mr = new_btree_modres(persistent_arena,
+            transient_arena,
+            &index_file,
+            &cmp,
+            view_btree_reduce,
+            view_btree_rereduce,
+            ctx,
+            VIEW_KV_CHUNK_THRESHOLD + (VIEW_KV_CHUNK_THRESHOLD / 3),
+            VIEW_KP_CHUNK_THRESHOLD + (VIEW_KP_CHUNK_THRESHOLD / 3));
+
+    cb_assert(mr != NULL);
+    couchfile_modify_result* targ_mr = make_modres(mr->arena, mr->rq);
+    cb_assert(targ_mr != NULL);
+    targ_mr->modified = 1;
+    targ_mr->node_type = KP_NODE;
+    targ_mr->pointers = nl0;
+    targ_mr->pointers_end = nl2;
+    finish_root(mr->rq, targ_mr, &ret);
+    cb_assert(ret == COUCHSTORE_SUCCESS);
+
+    tree_file_close(&index_file);
+    remove(dst_file);
+    free_view_reduction(&reduction1);
+    free_view_reduction(&reduction2);
+    free_view_btree_reduction(red);
+    free_view_reducer_ctx(ctx);
+    free(key1_bin);
+    free(key2_bin);
+    free(value1.values[0].buf);
+    free(value2.values[0].buf);
+    free_view_value(&value1);
+    free_view_value(&value2);
+    free(value1_bin);
+    free(value2_bin);
+    free(value3_bin);
+    free_node_list(nl0);
+    delete_arena(persistent_arena);
+    delete_arena(transient_arena);
+}
+
 void reducer_tests(void)
 {
     fprintf(stderr, "Running built-in reducer tests ... \n");
@@ -1541,4 +1743,6 @@ void reducer_tests(void)
     fprintf(stderr, "End of view btree multiple reducer tests\n");
     test_view_btree_no_reducers();
     fprintf(stderr, "End of view btree no reducer tests\n");
+    test_view_btree_large_reducer();
+    fprintf(stderr, "End of view btree large reducer tests\n");
 }
